<resources>
    //Strings - Duvan
    <string name="app_name">Ejemplo</string>
    <string name="cargandoDialog">Esperando confirmación de conductor...</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_google_maps_api">google_maps_api</string>
    <string name="btnDireccion">¿Dónde se dirige?</string>
    <string name="txIngresarPrecio">Ingrese un precio</string>
    <string name="nombreHeader">Juanito Perez</string>
    <string name="opVehiculo">Mi Vehiculo</string>
    <string name="opCuenta">Mi Cuenta</string>
    <string name="btnDirxccion">¿Dónde se dirige?</string>
    <string name="btnCasa">Casa</string>
    <string name="btnTrabajo">Trabajo</string>
    <string name="btnLugares">Lugares</string>
    <string name="btnSeleccionarUbicacion">Seleccionar</string>
    <string name="ubiDestino">Ubicación destino: %s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Clase navigation drawer</string>
    <string name="Viaje">Viaje</string>
    <string name="btnConfirmarViaje">Confirmar</string>
    <string name="DisponibilidadP">Disponible:</string>
    <string name="Efectivo">Efectivo</string>
    <string name="Transferencia">Transferencia</string>
    <string name="precio">Precio:</string>
    <string name="crear_Cuenta2">Imagen Japan</string>
    <string name="googleAPIKEY">AIzaSyAnqyuc34HCfl0sIDOhQ2fYs7LJHhozCa8</string>
    <string name="Disponibilidad">Disponibilidad:</string>
    <string name="EstimaciónTiempo">Tiempo Estimado:</string>
    <string name="btnBuscar">Buscar</string>
    <string name="txtUbiActual">Seleccione en donde se encuentra</string>
    <string name="txtUbiDestino">Seleccione hacia donde se dirige</string>
    <string name="textUbiActual">Ubicación actual</string>
    <string name="textUbiDestino">Ubicación destino</string>
    <string name="btnIr">Buscar un vehiculo</string>
    <string name="rbConductor">Conductor</string>
    <string name="rbPasajero">Pasajero</string>
    <string name="marker_from">Desde</string>
    <string name="marker_to">Hacia</string>
    <string name="mSolicitudes">Solicitudes</string>
    <string name="mIngresos">Ingresos</string>
    <string name="mClasificacion">Clasificación</string>
    <string name="mPago">Pago</string>
    <string name="mCAyuda">Ayuda</string>
    <string name="mCSoporte">Soporte</string>
    <string name="mCSeguridad">Seguridad</string>
    <string name="mCConfiguraciones">Configuración</string>
    <string name="abrirToggle">Abrir</string>
    <string name="cerrarToogle">Cerrar</string>
    <string name="btnEntrar">Iniciar sesión</string>
    <string name="tvCorreo">Email</string>
    <string name="tvContra">Contraseña</string>
    <string name="cbRecuerdame">Recuerdame</string>
    <string name="comoVas">¿Pasajero o Conductor?</string>
    <string name="telefono">Teléfono</string>
    // Strings - Luis
    <string name="miperfil">Mi Perfil</string>
    <string name="editarfoto">Editar foto de perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="numtel">Numero de telefono</string>
    <string name="correo">Correo electronico</string>
    <string name="cambiarclave">Cambiar clave</string>
    <string name="misdisp">Mis dispositivos</string>
    <string name="cerrarsesion">Cerrar sesion</string>
    <string name="eliminarcuenta">Eliminar cuenta</string>
    <string name="vamosrecorrido">Vamos a por ese recorrido</string>
    <string name="ingresacelular">+56 Ingresa tu celular</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="rellenatuperfil">Rellena tu Perfil</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ficha">Ficha</string>
    <string name="iniciarsesion">Iniciar sesion</string>
    <string name="notienescuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="usuario">Usuario</string>
    <string name="sistema">Sistema</string>
    <string name="HolaC">Hola Conductor</string>
    <string name="HolaP">Hola Pasajero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">iniciarSesion</string>
    <string name="iniciar_sesi_n">iniciar</string>
    <string name="password">pass</string>
    <string name="Ficha">Ficha</string>
    <string name="imagenPerro">imagenPerro</string>
    <string name="IconoPersona">iconoPersona</string>
    <string name="editarNombre">editarNombre</string>
    <string name="editarApellido">editarApellido</string>
</resources>